--- a/app/src/main/res/layout/fragment_cities_list.xml
+++ b/app/src/main/res/layout/fragment_cities_list.xml
@@ -18,7 +18,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:background="#2C2B2B"
+            android:background="#373636"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,7 +29,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:text="Error"
                 android:textColor="#CD1C1C"
@@ -52,7 +52,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/list_cities" />
 
             <Button
-                android:id="@+id/button_deletecity"
+                android:id="@+id/button_deleteCity"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
