--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#a6a6a6</color>
+    <color name="colorPrimaryDark">#4d4d4d</color>
     <color name="colorAccent">#03DAC5</color>
 </resources>
